--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
+    "xlsx": "^0.18.5",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0",
-    "react-router": "^7.11.0",
-    "xlsx": "0.18.5"
+    "react": "^19.2.3",
+    "react-router": "^7.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
